# AddressBook

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Dockerfile  LICENSE  README.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  database.py  main.py
app/models/: contact.py  user.py
app/routers/: auth.py  contacts.py
app/schemas/: contact.py  token.py  user.py
app/services/: contact_service.py  user_service.py
app/utils/: auth.py
docs/: PRD.md
tests/: conftest.py  test_auth.py  test_auth_endpoints.py  test_config.py  test_contact_service.py  test_contacts_endpoints.py  test_database.py  test_main.py  test_schemas.py
